# Smart-Whatsapp-Order-AI

./: .gitignore  FRONTEND_API_DOCS.md  README.md  pyproject.toml  requirements.txt  seed_bank_accounts.py  seed_products.py  seed_products_old.py
alembic/: env.py
alembic/versions/: 029cc9e01d05_add_variant_id_to_cart_items_and_order_.py  07485dd8fed2_add_customer_addresses_table_and_update_.py  08bcb9d036c4_add_tool_metadata_to_messages.py  172b6007934c_add_cascade_deletes_to_foreign_keys.py  366c51d9078d_remove_tracking_number_column.py  5ca7b41d369c_add_summary_columns_to_conversations.py  676b5c7ce865_initial_tables.py  8906ae192cc1_add_order_tracking_columns_and_status_.py  992908d31ec1_create_tables.py  9b1c87a9ce59_replace_media_columns_with_single_media_.py  ecafcc00c99b_initial_tables.py  fe787afa0f6d_add_store_settings_and_audit_logs_tables.py
app/: main.py
app/api/: router.py
app/core/: __init__.py  common.py  config.py  dependencies.py  exceptions.py  utils.py
app/db/: base.py  db_engine.py
app/services/: analytics_service.py  audit_log_service.py  auth_service.py  bank_account_service.py  broadcast_service.py  cart_item_service.py  cart_service.py  category_service.py  conversation_service.py  customer_address_service.py  customer_message_handler_service.py  customer_segmentation_service.py  customer_service.py  human_handoff_service.py  inventory_service.py  message_service.py  order_item_service.py  order_service.py  order_tracking_service.py  payment_service.py  processed_webhook_service.py  product_service.py  product_variant_service.py  (+8 more)
(+89 files in other folders)
